remove router for now

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset=utf-8>
   <script src=js/jquery.js></script>
   <script src=js/underscore.js></script>
-  <script src=js/underscore.string.js></script>
   <script src=js/backbone.js></script>
-  <link rel=stylesheet type=text/css href=css/style.css />
   <script src=js/morphemes.js></script>
+  <!-- script src=js/router.js></script -->
+
+  <link rel=stylesheet type=text/css href=css/style.css />
+
 </head>
 <body>
 
-  <p id=analyzer>
-    <span contenteditable=true spellcheck=false class=word>nohpʰo-w</span>
-  </p>
+  <p id=word><input type=text></p>
 
   <script id='morphemesTemplate' type='text/template'>
   <table class=morphemes>
